--- a/views/trophies/show.ejs
+++ b/views/trophies/show.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-4 mb-1"> <%= trophy.title %></h1>
+        <h1 class="mt-4 mb-1"><%=trophy.title%></h1>
         <div class="text-muted mb-2">
             <%= trophy.length %>
         </div>
@@ -23,7 +23,7 @@
         <div class="mb-2">
             <%= trophy.tags %>
         </div>
-        <a href="/articles/edit<%=trophy.id%>" class="btn btn-info">Edit</a>
+        <a href="/trophies/edit/<%=trophy.id%>" class="btn btn-info">Edit</a>
         <a href="/" class="btn btn-secondary">All Trophies</a>
         
         
