--- a/views/trophies/edit.ejs
+++ b/views/trophies/edit.ejs
@@ -8,8 +8,21 @@
     <title>Trophy Case</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="mb-4">Edit Trophy</h1>
+
+    <nav class="navbar fixed-top navbar-light bg-light">
+            <a class="navbar-brand" href="#">Trophy Case</a>
+            <ul class="navbar-nav ml-auto"> 
+                    <li class="nav-item"> 
+                            <a class="btn btn-secondary" href="/"> 
+                                All Trophies
+                            </a> 
+                    </li> 
+                    
+            </ul> 
+    </nav>
+
+    <div class="container p-3">
+        <h1 class="mt-5 mb-4">Edit Trophy</h1>
         
         <form action="/trophies/<%= trophy.id %>?_method=PUT" method="POST">
             <%- include('form.ejs') %>
