--- a/views/trophies/index.ejs
+++ b/views/trophies/index.ejs
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Trophy Case</title>
 </head>
 <body>
+        <nav class="navbar fixed-top navbar-light bg-light">
+            <a class="navbar-brand" href="#">Trophy Case</a>
+            <ul class="navbar-nav ml-auto"> 
+                    <li class="nav-item"> 
+                        <a class="btn btn-success" href="/trophies/new"> 
+                          New Trophy 
+                        </a> 
+                    </li> 
+                    
+                </ul> 
+        </nav>
+
+
     <div class="container">
-        <h1 class ="mb-3 mt-3">Trophies</h1>
-        <a href= "/trophies/new" class="btn btn-success">New Trophy</a>
+        <h1>Trophies</h1>
+       <!-- <a href= "/trophies/new" class="btn btn-success mt-3">New Trophy</a> -->
     
         <% trophies.forEach(trophy => { %>
             <div class="card mt-4 mb-2">
