--- a/views/trophies/new.ejs
+++ b/views/trophies/new.ejs
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Trophy Case</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="mb-4">New Trophy</h1>
+    <nav class="navbar fixed-top navbar-light bg-light">
+            <a class="navbar-brand" href="#">Trophy Case</a>
+            <ul class="navbar-nav ml-auto"> 
+                    <li class="nav-item"> 
+                            <a class="btn btn-secondary" href="/"> 
+                                All Trophies
+                            </a> 
+                    </li> 
+                    
+            </ul> 
+    </nav>
+
+
+    <div class="container p-3">
+        <h1 class="mt-5 mb-4">New Trophy</h1>
         
         <form action="/trophies" method="POST">
             <%- include('form.ejs') %>
