--- a/views/trophies/show.ejs
+++ b/views/trophies/show.ejs
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Trophy Case</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-4 mb-1"><%=trophy.title%></h1>
+        <nav class="navbar fixed-top navbar-light bg-light">
+                <a class="navbar-brand" href="#">Trophy Case</a>
+                <ul class="navbar-nav ml-auto"> 
+                        <li class="nav-item"> 
+                                <a class="btn btn-secondary" href="/"> 
+                                    All Trophies
+                                </a> 
+                        </li> 
+                        
+                </ul> 
+        </nav>
+
+
+    <div class="container p-3">
+        <h1 class="mt-5 mb-1"><%=trophy.title%></h1>
         <div class="text-muted mb-2">
             <%= trophy.length %>
         </div>
@@ -17,14 +31,14 @@
             <%= trophy.description %>
         </div>
         <div class="mb-2"> 
-            <%= trophy.link %>
+           <a href="<%= trophy.link %>"><%= trophy.link %></a>
         </div>
 
         <div class="mb-2">
             <%= trophy.tags %>
         </div>
-        <a href="/trophies/edit/<%=trophy.id%>" class="btn btn-info">Edit</a>
-        <a href="/" class="btn btn-secondary">All Trophies</a>
+        <a href="/trophies/edit/<%=trophy.id%>" class="btn btn-info">Edit</a> 
+       <!-- <a href="/" class="btn btn-secondary">All Trophies</a> -->
         
         
     </div>
